# vexa

./: .dependency-cruiser.cjs  .env.example  .gitguardian.yml  .gitignore  .gitmodules  AGENTS.md  BOT_EXIT_LOGIC.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.monolithic  HANDOFF-0.12.17.md  MANIFEST.md  Makefile  NEXT-SESSION-PROMPT.md  PIPELINE-RELEASE.md  README.md  RELEASE-0.11.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_LICENSES.md  VERSION  VEXA-DESKTOP.md  VEXA_ADMIN_API_DOCUMENTATION.md  VEXA_API_DOCUMENTATION.md  ZAKI-DOWNSTREAM.md  ZAKI-PLAN.md  architecture.calm.json  architecture.seal.json  claap-transcript.txt  constraints.txt  contracts.seal.json  docker-compose.lite.yml  docker-compose.local-db.yml  docker-compose.local.yml  docker-compose.secrets.SAMPLE.yml  docker-compose.yml  download_model.py  env-example.cpu  env-example.gpu  (+24 more)
.agents/: .gitignore  AGENTS.md
.claude/: CLAUDE.md  skills
.githooks/: pre-push
.github/: labeler.yml  pull_request_template.md
.planning/: ROADMAP.md
.playwright-mcp/: page-2026-06-16T13-20-28-282Z.yml  page-2026-06-21T21-48-28-822Z.yml  page-2026-06-21T21-48-45-010Z.yml  page-2026-06-21T21-49-02-410Z.yml  page-2026-06-21T21-54-22-661Z.yml  page-2026-06-21T21-54-36-378Z.yml  page-2026-06-21T21-54-55-559Z.yml  page-2026-06-21T21-58-27-847Z.yml  page-2026-06-21T21-58-46-645Z.yml  page-2026-06-21T21-58-56-879Z.yml  page-2026-06-21T21-59-24-367Z.yml  page-2026-06-21T22-05-18-544Z.yml  page-2026-06-21T22-05-36-314Z.yml  page-2026-06-21T22-06-15-573Z.yml  page-2026-06-21T22-09-48-186Z.yml
agent/: transcript_cge-sori-gdv_1751369895399.json  transcript_cya-gxbs-gst_2025-06-30T10-14-23.json  transcript_cya-gxbs-gst_2025-06-30T10-29-05.json  transcript_cya-gxbs-gst_2025-06-30T12-26-00.json  transcript_cya-gxbs-gst_2025-06-30T12-29-00.json  transcript_cya-gxbs-gst_2025-06-30T12-42-05.json  transcript_ept-pktk-uco_1751293954286.json  transcript_ept-pktk-uco_1751294611232.json  transcript_ept-pktk-uco_1751297212697.json  transcript_jmr-vjiy-bor_2025-07-01T15-17-05.json  transcript_rox-xhyj-hhy_2025-06-27_12-15-24.json  transcript_sxf-vkwo-sxa_2025-07-01T15-13-06.json  transcript_vhg-ztdj-iqr_1751359921488.json  transcript_yku-qofq-vyy_1751293504607.json  transcript_yku-qofq-vyy_1751374116931.json  transcript_yku-qofq-vyy_1751374487515.json  transcript_yku-qofq-vyy_1751375486806.json
agent/services/agent-api/: pyproject.toml
agent/services/agent-api/src/agent_api/: contracts.py  core.py  ports.py
agent/services/agent-api/tests/: fakes.py
assets/: README.md
carve/: PROPOSAL.md  README.md  seed.sh  (+6 more)
clients/slim/: pyproject.toml
core/identity/: pyproject.toml
core/identity/contracts/: README.md
core/identity/contracts/identity.v1/: README.md
core/identity/contracts/identity.v1/golden/: README.md
core/identity/services/: README.md
core/identity/services/admin-api/src/: README.md
core/identity/services/admin-api/src/admin_api/: README.md  __main__.py  config.v1.json
core/identity/services/admin-api/src/admin_api/app/: README.md  main.py
core/identity/services/admin-api/src/admin_api/schema/: README.md  models.py
core/identity/services/admin-api/tests/: README.md  conftest.py  test_bootstrap_admin.py  test_calendar_config.py  test_db_pool.py  test_model_settings.py  test_stack_admin_api.py  test_stack_redis.py
core/identity/src/: README.md
core/identity/src/identity_core/: README.md  tokens.py
core/identity/tests/: README.md
core/meetings/services/mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml
core/meetings/services/mcp/src/: README.md
core/meetings/services/mcp/src/vexa_mcp/: README.md  __init__.py  __main__.py  app.py  link_parser.py  prompts.py
core/meetings/services/mcp/tests/: README.md  conftest.py  test_app.py  test_health.py  test_mcp_client_session.py  test_mcp_surface.py  test_parse_meeting_link.py
core/runtime/: Dockerfile  README.md  pyproject.toml
core/runtime/contracts/runtime.v1/: README.md
core/runtime/src/runtime_kernel/: __main__.py  api.py  bot_contract.py  config.v1.json  docker_backend.py  isolation.py  k8s_backend.py  kernel.py  mounts.py  process_backend.py  profiles.py
core/runtime/tests/: test_api.py  test_backend_select.py  test_config_contract.py  test_isolation.py  test_k8s_command_wiring.py  test_lifecycle.py  test_mounts.py  test_process_backend.py  test_profiles.py  test_readopt.py  test_start_conflict.py  test_worker_image.py  test_zaki_bot_contract.py
gateway/services/conformance/: pyproject.toml
gateway/services/conformance/src/gateway_conformance/: __init__.py  fake_meeting_api.py  ws_harness.py
gateway/services/conformance/tests/: test_ws_protocol.py
meetings/services/meeting-api/: Dockerfile  README.md  pyproject.toml
meetings/services/meeting-api/src/meeting_api/: README.md  __init__.py  __main__.py  app.py
meetings/services/meeting-api/src/meeting_api/bot_spawn/: README.md  __init__.py  adapters.py  fakes.py  invocation.py  ports.py  router.py  service.py
meetings/services/meeting-api/src/meeting_api/collector/: adapters.py  app.py  ingest.py
meetings/services/meeting-api/src/meeting_api/lifecycle/: README.md  __init__.py  machine.py  receiver.py
meetings/services/meeting-api/src/meeting_api/recordings/: adapters.py  jsonb.py  router.py
meetings/services/meeting-api/src/meeting_api/sessions/: models.py
meetings/services/meeting-api/tests/: test_bot_spawn.py  test_ingest.py
meetings/services/transcription-collector/: README.md  pyproject.toml
meetings/services/transcription-collector/src/: README.md
meetings/services/transcription-collector/src/transcription_collector/: README.md  __init__.py  adapters.py  app.py  models.py
meetings/services/transcription-collector/tests/: README.md  test_collector_api.py  test_health.py  test_ingest.py
runtime/: Dockerfile  pyproject.toml
runtime/contracts/runtime.v1/: generate.mjs
runtime/contracts/runtime.v1/golden/: README.md
runtime/src/runtime_kernel/: README.md  __init__.py  api.py  backend.py  docker_backend.py  kernel.py  process_backend.py  profiles.py
(+2990 files in other folders)
