[project]
name = "vexa-runtime"
version = "0.12.0"
description = "The runtime kernel — spawns/executes workloads (implements runtime.v1)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "jsonschema>=4,<5",
    "referencing>=0.30,<0.40",
    "fastapi>=0.110,<1",
    "httpx>=0.27,<0.29",
    "redis>=5,<6",
    "fakeredis>=2.20,<3",
    "croniter>=2,<6",
    "requests-unixsocket>=0.3,<0.5",
]

[dependency-groups]
# test runner only — kept out of the production images (uv sync --no-dev in the Dockerfiles)
dev = ["pytest>=9.0.3"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
