[project]
name = "vexa-meeting-api"
version = "0.12.0"
description = "The cloud meeting-api control-plane carve — recording.v1 master codec (Python twin) + the O-MTG-1 lifecycle receiver/FSM (lifecycle.v1) + the O-MTG-2 webhooks brick (webhook.v1: HMAC sign/verify, SSRF guard, event-filter, redis-backed retry) + the O-MTG-3 scheduling brick (schedule.v1: ScheduledBot{cron|at} → POST /bots job, Clock-gated fire/re-arm/cancel)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
    "jsonschema>=4.21,<5",
    "referencing>=0.34,<1",
    "redis>=5,<6",
    "fakeredis>=2.21,<3",
    "croniter>=2,<4",
    "pytest>=8",
    "pytest-asyncio>=0.23,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
